--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
 
 		<!-- id value #name -->
 		<h4 id="name">id selector</h4>
+
+		<ul>
+			<li><a href="#name1">travel</a></li>
+			<li><a href="#name2">scholar</a></li>
+		</ul>
+
+
+		<!-- GROUPING SELECTOR -->
+		<h6 id="rule">
+			<p>definition</p>
+		</h6>
+		
+		<div>scholar</div>
+		<!------------------------->
+
 	</body>
 	</html>
